predict button changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,60 +14,24 @@
 
 <body>
   <div class="login">
-    <h1>Make Single Prediction:</h1>
-    <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}" method="post">
-      <table>
-        <tr>
-          <td> <input type="text" name="t" placeholder="Enter T Value" required="required" /></td>
-          <td><input type="text" name="s" placeholder="Enter S Value" required="required" /></td>
-          <td> <button type="submit" class="btn btn-primary"><b>Predict</b></button></td>
-        </tr>
-        <tr>
-          <td>{{ input_value }}</td>
-        </tr>
-        <tr>
-          <td>Predicted Top: {{ prediction_value }} </td>
-        </tr>
-      </table>
-    </form>
-    <br><br><br><br>
-    <hr>
-  </div>
-  <div class="login">
-    <h1>Make Multiple Predictions:</h1>
-    <p>
-      Enter T and S in JSON format
-      <br>
-      <b>Sample Input:</b> {"s": [100, 200, 300], "t":[1, 2, 3]}
-    </p>
-
-    <h3><mark>{{ message }}</mark></h3>
-    <form action="{{ url_for('predict_json')}}" method="post">
-      <table>
-        <tr>
-          <td>
-            <textarea id="input_data" name="input_data" rows="4" cols="50" required></textarea>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <button type="submit" class="btn btn-primary"><b>Predict Multiple</b></button>
-          </td>
-        </tr>
-        <tr>
-          <td>{{ input_values }}</td>
-        </tr>
-        <tr>
-          <td>Predicted Tops: {{ predicted_values }} </td>
-        </tr>
-      </table>
-
-    </form>
     <br>
+    <h1>Home Page:</h1>
+    <br>
+    <form action="{{ url_for('to_train')}}" method="get">
+      <table>
+        <tr>
+          <td> <button type="submit" class="btn btn-primary" disabled><b>Train Model</b></button></td>
+        </tr>
+      </table>
+    </form>
+    <form action="{{ url_for('to_predict')}}" method="get">
+      <table>
+        <tr>
+          <td> <button type="submit" class="btn btn-primary"><b>Make Prediction</b></button></td>
+        </tr>
+      </table>
+    </form>
   </div>
-
-
 </body>
 
 </html>
