hideen train button

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
     <br>
     <h1>Home Page:</h1>
     <br>
-    <form action="{{ url_for('to_train')}}" method="get">
+    <!-- <form action="{{ url_for('to_train')}}" method="get">
       <table>
         <tr>
           <td> <button type="submit" class="btn btn-primary" disabled><b>Train Model</b></button></td>
         </tr>
       </table>
-    </form>
+    </form> -->
     <form action="{{ url_for('to_predict')}}" method="get">
       <table>
         <tr>
